# ez-pngtuber

./: .gitignore  AGENTS.md  README.md  StreamkitOverlayTemplate.html
application/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
application/src/: AppPaths.cpp  AppPaths.h  DiscordModels.h  DiscordRpcClient.cpp  DiscordRpcClient.h  GroupStore.cpp  GroupStore.h  MainWindow.cpp  MainWindow.h  StreamKitMonitor.cpp  StreamKitMonitor.h  main.cpp
scripts/: build-msvc.ps1  create-vcpkg-baseline.ps1
